Added example_read_mac to Rhino3dmIo
In addition, modified rhcommon_opennurbs.xcodeproj to target two
different platforms (iOS and Mac OS X) to build the native libraries
for iOS and OS X respectively.  Modified build_mobile.py to the more
general build_native.py.  Modified on_tree.cpp in keeping with internal
SVN revision 101847 (in 6/trunk/).

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,15 @@ rh3dmio_native_out
 /*.suo
 
 /methodgen/bin/Debug
+
+examples/rhino3dmio/example_read_mac/bin/
+examples/rhino3dmio/example_read_mac/obj/
+c/rhcommon_opennurbs.xcodeproj/xcuserdata/
+c/rhcommon_opennurbs.xcodeproj/project.xcworkspace/xcuserdata/
+*.xcuserstate
+*.xccheckout
+*.xcuserstate
+
+c/rhcommon_opennurbs.xcodeproj/project.xcworkspace/xcuserdata/dan.xcuserdatad/UserInterfaceState.xcuserstate
+
+c/rhcommon_opennurbs.xcodeproj/project.xcworkspace/xcshareddata/rhcommon_opennurbs.xccheckout
