Adds documentation to example_read_mac

--- a/examples/rhino3dmio/example_read_mac/example_read_mac.csproj
+++ b/examples/rhino3dmio/example_read_mac/example_read_mac.csproj
@@ -63,5 +63,6 @@
       <Link>libopennurbs.dylib</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
