Adds ReadArchiveVersion static method to File3dm
Additional changes to methodgen - commenting out the post-build event
that is unnecessary.  AutoNativeMethods restored to its
Rhino3dmIo-centric self.

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@
 /methodgen/bin/Release/MethodGen.exe
 /methodgen/bin/Release/MethodGen.exe.config
 /methodgen/bin/Release/MethodGen.exe.mdb
+/methodgen/obj/
 
 /c/Debug
 /c/English.lproj
