creating rhino3dmio branch and updating to Windows Rhino5 SR11 code

--- a/examples/rhino3dmio/example_read_mac/example_read_mac.csproj
+++ b/examples/rhino3dmio/example_read_mac/example_read_mac.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -58,5 +58,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\dotnet\Rhino3dmIO.csproj">
+      <Project>{E10F2F27-4825-4BFB-83B4-E929BDC6E027}</Project>
+      <Name>Rhino3dmIO</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
